Update GitSecrets Pipeline AWS.yml

--- a/GitSecrets Pipeline AWS.yml
+++ b/GitSecrets Pipeline AWS.yml
@@ -1,30 +1,16 @@
-trigger:
-  branches:
-    include:
-      - '*'
+version: 0.2
 
-jobs:
-- job: GitsecretsCheck
-  displayName: 'Gitsecrets Check'
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.x'
-      addToPath: true
-
-  - script: |
-      sudo apt-get update
-      sudo apt-get install -y wget
-      wget https://github.com/awslabs/git-secrets/archive/1.3.0.tar.gz
-      tar -xvf 1.3.0.tar.gz
-      cd git-secrets-1.3.0
-      sudo make install
-    displayName: 'Install Gitsecrets'
-
-  - script: |
-      git secrets --register-aws --global
-      git secrets --install
-      git secrets --scan --recursive
-    displayName: 'Run Gitsecrets Scan'
+phases:
+  install:
+    commands:
+      - curl -L https://github.com/awslabs/git-secrets/archive/1.3.0.tar.gz -o git-secrets.tar.gz
+      - tar -xvf git-secrets.tar.gz
+      - cd git-secrets-1.3.0/
+      - sudo make install
+  pre_build:
+    commands:
+      - git secrets --register-aws --global
+  build:
+    commands:
+      - git secrets --install
+      - git secrets --scan --recursive
