--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,3 +1,9 @@
 FROM jupyter/datascience-notebook
-
 RUN pip install keras autokeras
+FROM ubuntu:latest
+RUN useradd -ms /bin/bash xubuntu
+RUN echo 'xubuntu:xubuntu' | chpasswd
+RUN usermod -aG sudo xubuntu
+USER xubuntu
+WORKDIR /home/xubuntu
+#CMD ["bash"]
